Add API Docs For Authentication API
